--- a/src/foot5x5/MainBundle/Resources/views/home.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/home.html.twig
@@ -9,8 +9,10 @@
 		<h1>foot5x5.fr !</h1>
 		<img src="{{ asset('logoFoot5x5_001d.png') }}" alt="Foot5x5_logo" class="img-responsive"/>
 		<h3>Créé ta communauté foot5x5 ou rejoins en une déjà existante!</h3>
-		<a href="{{ path('login') }}"><button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-chevron-right"></span> Connexion</button></a>
-		<a href="{{ path('register') }}"><button type="button" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span> S'inscrire</button></a>
+        <div class="landing-buttons col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+        	<a href="{{ path('login') }}"><button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-chevron-right"></span> Connexion</button></a>
+			<a href="{{ path('register') }}"><button type="button" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span> S'inscrire</button></a>
+		</div>
 	</div>
 </div>
 
