--- a/web/css/foot5x5.css
+++ b/web/css/foot5x5.css
@@ -298,6 +298,7 @@ div#content {
 	border-top: 3px solid #4F5261;
 	border-bottom: 3px solid #4F5261;
 }
+/*
 #home-prefooter a button {
     margin-top: 10px;
     margin-bottom: 10px;
@@ -307,6 +308,7 @@ div#content {
 	white-space: normal;
 	border: 2px solid #E0F0FF;
 }
+*/
 #welcome-communities {
 	margin-top: 10px;
 	border-top: 2px solid #E0F0FF;
