--- a/src/foot5x5/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/foot5x5/UserBundle/Resources/views/Security/login.html.twig
@@ -2,30 +2,34 @@
 
 {% block title %}Connexion{% endblock %}
 
-{% block content %}
-<h2 class="text-center">{{ block('title') }}</h2>
-{% if error %}
-<div class="alert alert-danger">
-    <strong>Login failed! </strong> {{ error.messageKey | trans(error.messageData, 'security') }}
-</div>
-{% endif %}
-<div class="well">
-    <form class="form-signin form-horizontal" role="form" action="{{ path('login_check') }}" method="post">
-        <div class="form-group">
-            <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
-				<input type="text" class="form-control" id ="username" name="_username" value="{{ last_username }}"  placeholder="Enter your username" required autofocus>
-            </div>
+{% block homecontent %}
+<div id="landing">
+	<div class="landing-content">
+		<h2>{{ block('title') }}</h2>
+        {% if error %}
+        <div class="alert alert-danger col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
+            <strong>Login failed! </strong> {{ error.messageKey | trans(error.messageData, 'security') }}
         </div>
-        <div class="form-group">
-            <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
-                <input type="password" class="form-control" id ="password" name="_password"  placeholder="Enter your password" required>
-            </div>
+        {% endif %}
+        <div class="well-transparent-blue col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
+            <form class="form-signin form-horizontal" role="form" action="{{ path('login_check') }}" method="post">
+                <div class="form-group">
+                    <div class="col-xs-8 col-xs-offset-2">
+                        <input type="text" class="form-control" id ="username" name="_username" value="{{ last_username }}"  placeholder="Enter your username" required autofocus>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-xs-8 col-xs-offset-2">
+                        <input type="password" class="form-control" id ="password" name="_password"  placeholder="Enter your password" required>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div>
+                        <button type="submit" class="btn btn-default btn-primary"><span class="glyphicon glyphicon-log-in"></span> Login</button>
+                    </div>
+                </div>
+            </form>
         </div>
-        <div class="form-group">
-            <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
-                <button type="submit" class="btn btn-default btn-primary"><span class="glyphicon glyphicon-log-in"></span> Login</button>
-            </div>
-        </div>
-    </form>
+	</div>
 </div>
 {% endblock %}
