--- a/src/foot5x5/MainBundle/Resources/views/home.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/home.html.twig
@@ -10,8 +10,8 @@
 		<img src="{{ asset('logoFoot5x5_001d.png') }}" alt="Foot5x5_logo" class="img-responsive"/>
 		<h3>Créé ta communauté foot5x5 ou rejoins en une déjà existante!</h3>
         <div class="landing-buttons col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-        	<a href="{{ path('login') }}"><button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-chevron-right"></span> Connexion</button></a>
-			<a href="{{ path('register') }}"><button type="button" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span> S'inscrire</button></a>
+			<a href="{{ path('login') }}" class="btn btn-primary"><span class="glyphicon glyphicon-chevron-right"></span> Connexion</a>
+			<a href="{{ path('register') }}" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span> S'inscrire</a>
 		</div>
 	</div>
 </div>
@@ -20,10 +20,10 @@
 <div id="home-create" class="container home-container">
 	<div class="row">
 		<div class="col-md-7 col-lg-6 grid">
-			<img src="{{ asset('img/foot5x5_community-home.png') }}">
-			<img src="{{ asset('img/foot5x5_random-draw.png') }}">
-			<img src="{{ asset('img/foot5x5_notes.png') }}">
-			<img src="{{ asset('img/foot5x5_admin.png') }}">
+			<img src="{{ asset('img/foot5x5_community-home.png') }}" alt="Community home view screenshot">
+			<img src="{{ asset('img/foot5x5_random-draw.png') }}" alt="Random draw view screenshot">
+			<img src="{{ asset('img/foot5x5_notes.png') }}" alt="Notes view screenshot">
+			<img src="{{ asset('img/foot5x5_admin.png') }}" alt="Admin view screenshot">
 		</div>
 		<div class="col-md-5 col-lg-6">
 			<h2>Créé ta communauté...</h2>
@@ -51,7 +51,7 @@
 			<p> - <strong>Administrateur</strong> : permet d'accéder à la plateforme d'administration (Attention ! trop d'admin' et ce sera vite le bordel !)</p>			
 		</div>
 		<div class="col-md-7 col-lg-6 text-center">
-			<img src="{{ asset('img/home-join-lazy.png') }}">
+			<img src="{{ asset('img/home-join-lazy.png') }}" alt="Can't someone else just do it?">
 		</div>
 	</div>
 </div>
@@ -65,8 +65,8 @@
 	<div class="col-xs-12 text-center">
 		<h2>Alors tu fais quoi ?!</h2>
 		<div class="landing-buttons col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-        	<a href="{{ path('login') }}"><button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-chevron-right"></span> Déjà inscrit!</button></a>
-			<a href="{{ path('register') }}"><button type="button" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span> Je m'inscris!</button></a>
+			<a href="{{ path('login') }}" class="btn btn-primary"><span class="glyphicon glyphicon-chevron-right"></span> Déjà inscrit!</a>
+			<a href="{{ path('register') }}" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span> Je m'inscris!</a>
 		</div>
 	</div>
 </div>
