--- a/src/foot5x5/MainBundle/Resources/views/layout.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/layout.html.twig
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="fr">
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,20 +15,20 @@
     <title>Foot 5x5 - {% block title %}{% endblock %}</title>
 
     <!-- jQuery -->
-    <script type="text/javascript" src="{{ asset('lib/jquery/jquery-1.11.2.min.js') }}"></script>
+    <script src="{{ asset('lib/jquery/jquery-1.11.2.min.js') }}"></script>
     <!-- jQuery UI -->
-    <script type="text/javascript" src="{{ asset('lib/jquery/jquery-ui-1.11.4.min.js') }}"></script>
+    <script src="{{ asset('lib/jquery/jquery-ui-1.11.4.min.js') }}"></script>
     <!-- JavaScript Boostrap plugin -->
-    <script type="text/javascript" src="{{ asset('lib/bootstrap/js/bootstrap.min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('lib/bootstrap/js/bootstrap-table.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('lib/bootstrap/js/bootstrap-table-fr-FR.js') }}"></script>
+    <script src="{{ asset('lib/bootstrap/js/bootstrap.min.js') }}"></script>
+    <script src="{{ asset('lib/bootstrap/js/bootstrap-table.js') }}"></script>
+    <script src="{{ asset('lib/bootstrap/js/bootstrap-table-fr-FR.js') }}"></script>
     <!-- CKEditor -->
-    <script type="text/javascript" src="{{ asset('ckeditor/ckeditor.js') }}"></script>
+    <script src="{{ asset('ckeditor/ckeditor.js') }}"></script>
 </head>
 
 <body>
 
-<nav class="navbar navbar-custom navbar-fixed-top navbar-inverse dark-blue-grad" role="navigation">
+<nav class="navbar navbar-custom navbar-fixed-top navbar-inverse dark-blue-grad">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-target">
@@ -120,7 +120,7 @@
 <footer class="container-fluid text-center">
 	<div class="row">
 		<div class="col-xs-4">
-			<img src="{{ asset('img/logoFoot5x5_001d.png') }}" class="icon">
+			<img src="{{ asset('img/logoFoot5x5_001d.png') }}" class="icon" alt="Foot 5x5 logo">
 		</div>
 		<div class="col-xs-4">
 			<h4>Foot 5x5 - © Etistav, 2018</h4>
