--- a/src/foot5x5/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/foot5x5/UserBundle/Resources/views/Security/login.html.twig
@@ -12,7 +12,7 @@
         </div>
         {% endif %}
         <div class="well-transparent-blue col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
-            <form class="form-signin form-horizontal" role="form" action="{{ path('login_check') }}" method="post">
+            <form class="form-signin form-horizontal" action="{{ path('login_check') }}" method="post">
                 <div class="form-group">
                     <div class="col-xs-8 col-xs-offset-2">
                         <input type="text" class="form-control" id ="username" name="_username" value="{{ last_username }}"  placeholder="Enter your username" required autofocus>
