--- a/src/foot5x5/MainBundle/Resources/views/home.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/home.html.twig
@@ -10,8 +10,8 @@
 		<img src="{{ asset('logoFoot5x5_001d.png') }}" alt="Foot5x5_logo" class="img-responsive"/>
 		<h3>Créé ta communauté foot5x5 ou rejoins en une déjà existante!</h3>
         <div class="landing-buttons col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-			<a href="{{ path('login') }}" class="btn btn-primary"><span class="glyphicon glyphicon-chevron-right"></span> Connexion</a>
-			<a href="{{ path('register') }}" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span> S'inscrire</a>
+			<a href="{{ path('login') }}" class="btn btn-primary"><span class="glyphicon glyphicon-chevron-right"></span>Connexion</a>
+			<a href="{{ path('register') }}" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span>Inscription</a>
 		</div>
 	</div>
 </div>
@@ -65,8 +65,8 @@
 	<div class="col-xs-12 text-center">
 		<h2>Alors tu fais quoi ?!</h2>
 		<div class="landing-buttons col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-			<a href="{{ path('login') }}" class="btn btn-primary"><span class="glyphicon glyphicon-chevron-right"></span> Déjà inscrit!</a>
-			<a href="{{ path('register') }}" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span> Je m'inscris!</a>
+			<a href="{{ path('login') }}" class="btn btn-primary"><span class="glyphicon glyphicon-chevron-right"></span>Déjà inscrit!</a>
+			<a href="{{ path('register') }}" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span>Je m'inscris!</a>
 		</div>
 	</div>
 </div>
