--- a/src/foot5x5/UserBundle/Resources/views/welcome.html.twig
+++ b/src/foot5x5/UserBundle/Resources/views/welcome.html.twig
@@ -8,17 +8,15 @@
 		<img src="{{ asset('logoFoot5x5_001d.png') }}" alt="Foot5x5_logo" class="img-responsive"/>
 		<h3>Créé ta communauté foot5x5 ou rejoins en une déjà existante!</h3>
         <div class="landing-buttons col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-            <a data-popup-open="popup-create-community" href="#">
-                <button type="button" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span> Créer une communauté</button>
-            </a>
-            <a href="{{ path('join_community') }}"><button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-chevron-right"></span> Rejoindre une communauté</button></a>
+            <a href="#" class="btn btn-success" data-popup-open="popup-create-community"><span class="glyphicon glyphicon-plus"></span>Créer une communauté</a>
+            <a href="{{ path('join_community') }}" class="btn btn-primary"><span class="glyphicon glyphicon-chevron-right"></span>Rejoindre une communauté</a>
         </div>
         {% if communities is not empty %}
         <div id="welcome-communities" class="well-transparent-blue col-lg-6 col-lg-offset-3 col-sm-8 col-sm-offset-2">
             <h3 class="text-center">Vos communautés</h3>
             <ul class="list-group">
                 {% for community in communities %}
-                    <a href="{{ path('select_community', {'id':community.id}) }}"><li class="list-group-item">{{ community.name }}</li></a>
+                    <li class="list-group-item"><a href="{{ path('select_community', {'id':community.id}) }}"><span>{{ community.name }}</span></a></li>
                 {% endfor %}
             </ul>
         </div>
