[HTML valid] Results view
Change #results-table to .results-table

--- a/src/foot5x5/MainBundle/Resources/views/index.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/index.html.twig
@@ -8,7 +8,7 @@
     <div class="col-lg-6 col-md-8 col-sm-10">
         <h2><span class="label dark-blue-grad">Dernier match</span></h2>
         {% if lastResult is not null %}
-        <table id="result-table" class="table table-bordered table-condensed">
+        <table class="table table-bordered table-condensed result-table">
             <thead class="dark-blue-grad">
                 <tr>
                     <th class="text-center" colspan="5">
