--- a/src/foot5x5/MainBundle/Resources/views/match_form.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/match_form.html.twig
@@ -23,7 +23,7 @@
         </ul>
     </div>
     <div class="col-md-6 col-md-offset-1">
-        <table id="result-table" class="table table-bordered table-condensed">
+        <table class="table table-bordered table-condensed result-table">
             <thead class="bg-primary">
                 <tr>
                     <th class="text-center" colspan="5">
