[HTML valid] Players view

--- a/src/foot5x5/MainBundle/Resources/views/players.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/players.html.twig
@@ -83,7 +83,7 @@
             <div class="popup-player-stats">
                 <h3>Statistiques</h3>
                 {% if ranksPerPeriod[player.id] %}
-                <table id="player-stats-table" class="table table-striped table-bordered table-condensed">
+                <table class="table table-striped table-bordered table-condensed">
                     <thead class="bg-primary">
                         <tr>
                             <th class="col-md-1 text-center">Trim.</th>
